# boa_console

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/boa_console/: __init__.py  boa.py
tests/: test_boa_console.py
